css fix for buy now button alignment on home page slides on mobile

--- a/public/styles/_kali.scss
+++ b/public/styles/_kali.scss
@@ -766,9 +766,9 @@ hr {
     }
 }
 
-.fullpage-wrapper .product-main {
+#fullpage .product-main {
     .buy-button {
-        margin: 0
+        margin: initial;
     }
 }
 
